# bowmont-railway

./: README.md  train.db
Point_Remote/: Point_Remote.ino
anyrail/: track plan - bare.any  track plan.any
arduino-command/: arduino-command.ino  main_control.ino
arduino-command/RJ11-socket/: RJ11 EXP-cache.lib  RJ11 EXP.bak  RJ11 EXP.kicad_pcb  RJ11 EXP.kicad_pcb-bak  RJ11 EXP.net  RJ11 EXP.pro  RJ11 EXP.sch  fp-info-cache
arduino-remote/: Point_Remote.ino  arduino-remote.ino
arduino-remote/pcb/: PointControl-cache.lib  PointControl.bak  PointControl.kicad_pcb  PointControl.kicad_pcb-bak  PointControl.net  PointControl.pro  PointControl.sch  PointControl.xml  _autosave-PointControl.kicad_pcb-bak
main_control/: main_control.ino
pc-control/: README.md  pyproject.toml  settings.json  settings.toml
pc-control/pc_control/: animate.py  layout.py  main.py  points.py  serial_comms.py  signals.py  track.py
pc-control/pc_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
train_db/: create_db.py
