[tool.poetry]
name = "pc-control"
version = "0.1.0"
description = ""
authors = ["Nick Clark <clarknick1990@gmail.com>"]
readme = "README.md"
packages = [{include = "pc_control"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
