[project]
name = "pc-control"
version = "0.1.0"
description = "PC Control for Bowmont Railway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame-widgets>=1.1.5",
    "pygame>=2.6.1",
    "pyserial>=3.5",
]

[tool.uv]
package = true

[project.scripts]
main = "pc_control.main:main"